# loss_moments

./: .gitignore  .travis.yml  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/: checks.sh
src/loss_moments/: __init__.py  __main__.py  _base.py  _examples.py  _gaussian.py  methods.py  utils.py
tests/: __init__.py  test_dists.py  test_loss_function.py  test_methods.py
