[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "loss_moments"
version = "0.1.0"
description = "Package to help calculate the mean and variance of a loss function for a ML model[D"
readme = "README.rst"
authors = [
  {name = "Erik Drysdale", email = "erikinwest@gmail.com"}
]
maintainers = [
  {name = "Erik Drysdale", email = "erikinwest@gmail.com"}
]
classifiers = [

]
license = {text = "GNU General Public License v3"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/ErikinBC/loss_moments/issues"
changelog = "https://github.com/ErikinBC/loss_moments/blob/master/changelog.md"
homepage = "https://github.com/ErikinBC/loss_moments"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

